--- a/Frontend/app/components/Auth/Login.html
+++ b/Frontend/app/components/Auth/Login.html
@@ -1,4 +1,4 @@
-<h2>Login</h2>
+<h2><span class="glyphicon glyphicon-log-in"></span> Login</h2>
 
 <div ng-show="message != null" ng-class="{ alert: true, 'alert-success': message == 'ok', 'alert-danger': message != 'ok' }" role="alert">
 	<strong>Anmeldung: {{message}}</strong>
