--- a/Frontend/app/components/Auth/User.html
+++ b/Frontend/app/components/Auth/User.html
@@ -1,2 +1,41 @@
-<h2><span class="glyphicon glyphicon-log-user"></span> {{currentUser.firstname}} {{currentUser.lastname}}</h2>
+<h2><span class="glyphicon glyphicon-user"></span> {{user.firstname}} {{user.lastname}}</h2>
 
+<form name="frm">
+	<table class="vertTable">
+		<tr ng-show="hasRight('editMasterData')">
+			<th>Benutzername</th>
+			<td>
+				<div>{{user.username}}</div>
+			</td>
+		</tr>
+		<tr ng-show="hasRight('editMasterData')">
+			<th>Passwort</th>
+			<td>
+				<input class="form-control" type="password" ng-model="user.password" />
+			</td>
+		</tr>
+		<tr ng-show="hasRight('editMasterData')">
+			<th>Vorname</th>
+			<td>
+				<input class="form-control" type="text" ng-model="user.firstname" />
+			</td>
+		</tr>
+		<tr ng-show="hasRight('editMasterData')">
+			<th>Nachname</th>
+			<td>
+				<input class="form-control" type="text" ng-model="user.lastname" />
+			</td>
+		</tr>
+		<tr ng-show="hasRight('editMasterData')">
+			<th>E-Mail</th>
+			<td>
+				<input class="form-control" type="text" ng-model="user.email" />
+			</td>
+		</tr>
+	</table>
+
+	<p>
+		<button ng-show="hasRight('editMasterData')" class="btn btn-default" ng-click="save()">Speichern</button>
+		<button class="btn btn-default" onclick="window.history.back();">Zur&uuml;ck</button>
+	</p>
+</form>
