--- a/Frontend/app/components/Player/RankHistory.html
+++ b/Frontend/app/components/Player/RankHistory.html
@@ -18,7 +18,7 @@
 			<span class="sortorder" ng-show="predicate === 'lastname'" ng-class="{reverse:reverse}"></span>
 		</th>
 		<th ng-show="SettingsService.teamId == null">
-			<a href="" ng-click="order('lastname')">Mannschaft</a>
+			<a href="" ng-click="order('team_id')">Mannschaft</a>
 			<span class="sortorder" ng-show="predicate === 'team_id'" ng-class="{reverse:reverse}"></span>
 		</th>
 		<th>
