--- a/Frontend/assets/css/app.css
+++ b/Frontend/assets/css/app.css
@@ -37,7 +37,9 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
-
+.glyphicon {
+	margin-right: 10pt;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
