--- a/Frontend/app/components/Article/Articles.html
+++ b/Frontend/app/components/Article/Articles.html
@@ -1,4 +1,4 @@
-<h2>Neuigkeiten</h2>
+<h2>Neuigkeitendfd sd</h2>
 
 <div class="container" ng-controller="ArticlesCtrl">
 	<div>
@@ -8,8 +8,9 @@
 		<div class="article">
 			<h2>{{art.title}}</h2>
 			<p ng-bind-html="art.content"></p>
+
 			<a ng-show="hasRight('editArticle')" href="#/EditArticle/{{art.id}}">Bearbeiten</a>
-			| <a ng-show="hasRight('deleteRight')" href="#/DeleteArticle/{{art.id}}">L&ouml;schen</a>
+			<a ng-show="hasRight('deleteRight')" href="#/DeleteArticle/{{art.id}}">L&ouml;schen</a>
 		</div>
 	</div>
 </div>
