--- a/Frontend/app/components/Player/RankSaison.html
+++ b/Frontend/app/components/Player/RankSaison.html
@@ -1,4 +1,4 @@
-﻿<h2>Torjäger der Saison </h2>
+﻿<h2>Torjäger der Saison {{selectedSaison.name}}</h2>
 <form>
 	<input type="text" ng-model="search">
 	<p ng-show="search">Du suchst gerade nach: {{search}}</p>
