--- a/Frontend/app/components/Match/Matches.html
+++ b/Frontend/app/components/Match/Matches.html
@@ -1,6 +1,6 @@
 <h2>Spiele</h2>
 <form>
-	<input type="text" ng-model="search">
+	<input type="text" class="form-control" ng-model="search" placeholder="Suche">
 	<p ng-show="search">Du suchst gerade nach: {{search}}</p>
 </form>
 
