--- a/Frontend/app/components/Match/Matches.html
+++ b/Frontend/app/components/Match/Matches.html
@@ -4,11 +4,15 @@
 	<p ng-show="search">Du suchst gerade nach: {{search}}</p>
 </form>
 
-<table class="table" ng-controller="MatchesCtrl">
+<table class="table">
 	<tr>
 		<th>
 			<a href="" ng-click="order('date')">Datum</a>
 			<span class="sortorder" ng-show="predicate === 'date'" ng-class="{reverse:reverse}"></span>
+		</th>
+		<th ng-show="teamId != null">
+			<a href="" ng-click="order('type')">Typ</a>
+			<span class="sortorder" ng-show="predicate === 'type'" ng-class="{reverse:reverse}"></span>
 		</th>
 		<th>
 			<a href="" ng-click="order('team1_name')">Mannschaft 1</a>
@@ -29,6 +33,7 @@
 	</tr>
 	<tr ng-repeat="m in matches | filter: search | orderBy:predicate:reverse">
 		<td><a href="#/MatchDetails/{{m.id}}">{{m.date | dateTime}}</a></td>
+		<td ng-show="teamId != null">{{m.type | matchType}}</td>
 		<td>{{m.team1_name}}</td>
 		<td>{{m.team2_name}}</td>
 		<td>{{m.goal1}}</td>
