--- a/Frontend/app/components/Match/Matches.html
+++ b/Frontend/app/components/Match/Matches.html
@@ -23,17 +23,17 @@
 			<span class="sortorder" ng-show="predicate === 'team2_name'" ng-class="{reverse:reverse}"></span>
 		</th>
 		<th>
-			<a href="" ng-click="order('goal1')">Tore 1</a>
+			<a href="" ng-click="order('goal1')" title="Tore 1">T 1</a>
 			<span class="sortorder" ng-show="predicate === 'goal1'" ng-class="{reverse:reverse}"></span>
 		</th>
 		<th>
-			<a href="" ng-click="order('goal2')">Tore 2</a>
+			<a href="" ng-click="order('goal2')" title="Tore 2">T 2</a>
 			<span class="sortorder" ng-show="predicate === 'goal2'" ng-class="{reverse:reverse}"></span>
 		</th>
 	</tr>
 	<tr ng-repeat="m in matches | filter: search | orderBy:predicate:reverse">
 		<td><a href="#/MatchDetails/{{m.id}}">{{m.date | dateTime}}</a></td>
-		<td ng-show="teamId != null">{{m.type | matchType}}</td>
+		<td ng-show="teamId != null" title="{{m.type | matchTypeLong}}">{{m.type | matchType}}</td>
 		<td>{{m.team1_name}}</td>
 		<td>{{m.team2_name}}</td>
 		<td>{{m.goal1}}</td>
