--- a/Frontend/app/components/Player/Rank.html
+++ b/Frontend/app/components/Player/Rank.html
@@ -5,7 +5,7 @@
 </form>
 
 <p ng-show="hasRight('editMasterData')">
-	<a href="#/Player/Details/new"><span class="glyphicon glyphicon-pencil"></span>Neuer Spieler</a>
+	<a href="#/Player/Details/new"><span class="glyphicon glyphicon-plus"></span>Neuer Spieler</a>
 </p>
 <table class="table">
 	<tr>
