--- a/Frontend/app/components/Match/MatchDetails.html
+++ b/Frontend/app/components/Match/MatchDetails.html
@@ -22,13 +22,13 @@
 			<select class="form-control" ng-model="m.id_saison_team2" ng-options="st.id as st.team.name for st in saisonTeams"></select>
 		</div>
 		<div class="col-xs-2">
-			<input class="form-control" type="text" ng-model="m.goals1" />
+			<input class="form-control" type="text" ng-model="m.goal1" />
 		</div>
 		<div class="col-xs-1">
 			<b>:</b>
 		</div>
 		<div class="col-xs-2">
-			<input class="form-control" type="text" ng-model="m.goals2" />
+			<input class="form-control" type="text" ng-model="m.goal2" />
 		</div>
 	</p>
 	<p>
