store match player

--- a/Frontend/app/components/Match/Player.html
+++ b/Frontend/app/components/Match/Player.html
@@ -13,6 +13,7 @@
 	<form>
 		<input type="text" class="form-control" ng-model="searchPlayer" placeholder="Suche">
 		<p ng-show="search">Du suchst gerade nach: {{searchPlayer}}</p>
+		<button class="btn btn-default" ng-click="savePlayer(number)">Spielerzuordnung speichern</button>
 	</form>
 
 	<!--
