--- a/Frontend/app/components/Player/Details.html
+++ b/Frontend/app/components/Player/Details.html
@@ -26,7 +26,7 @@
 		</tr>
 		<tr>
 			<th colspan="2">
-				<h3>Basisdaten (bis 2012)</h3>
+				<h3>Basisdaten</h3>
 			</th>
 		</tr>
 		<tr>
@@ -51,31 +51,3 @@
 	</p>
 </form>
 
-<!--
-<h2>Saison</h2>
-
-<table>
-
-<tr>
-  <th>Anzahl Spiele Gesamt</th>
-  <td>{{spieler.anzahlSpiele}}</td>
-</tr>
-<tr>
-  <th>Anzahl Tore Gesamt</th>
-  <td>{{spieler.tore}} + {{sp.anzahlTore}}</td>
-</tr>
-<tr>
-  <th>Gelbe Karten</th>
-  <td>{{sp.gelb}}</td>
-</tr>
-<tr>
-  <th>Gelbrote Karten</th>
-  <td>{{sp.gelbrot}}</td>
-</tr>
-<tr>
-  <th>Rote Karten</th>
-  <td>{{sp.rot}}</td>
-</tr>
-</table>
-
--->
