--- a/Frontend/app/components/Team/TeamDetails.html
+++ b/Frontend/app/components/Team/TeamDetails.html
@@ -1,78 +1,31 @@
-<h2>{{player.firstname}} {{player.lastname}}</h2>
-<img src="images/spieler/{{player | imageName}}.jpg" alt="{{spieler.name}}">
-<form name="frm">
+
+<h2 ng-show="hasRight('editMasterData')">Mannschaft bearbeiten</h2>
+<h2 ng-show="!hasRight('editMasterData')">{{team.name}}</h2>
+
+<div ng-show="error != null" class="alert alert-danger" role="alert">
+	<strong>{{error}}</strong>
+</div>
+
+<form ng-show="hasRight('editMasterData')" name="frm">
 	<table class="vertTable">
-		<tr ng-show="hasRight('editMasterData')">
-			<th>Vorname</th>
+		<tr>
+			<th>Name</th>
 			<td>
-				<input class="form-control" type="text" ng-model="player.firstname" />
-			</td>
-		</tr>
-		<tr ng-show="hasRight('editMasterData')">
-			<th>Nachname</th>
-			<td>
-				<input class="form-control" type="text" ng-model="player.lastname" />
+				<input class="form-control" type="text" ng-model="team.name" />
 			</td>
 		</tr>
 		<tr>
-			<th>Spitzname</th>
+			<th>Homepage</th>
 			<td>
-				<div ng-show="!hasRight('editMasterData')">{{player.nickname}}</div>
-				<input class="form-control" ng-show="hasRight('editMasterData')" type="text" ng-model="player.nickname" />
-			</td>
-		</tr>
-		<tr>
-			<th colspan="2">
-				<h3>Basisdaten (bis 2012)</h3>
-			</th>
-		</tr>
-		<tr>
-			<th>Spiele</th>
-			<td>
-				<div ng-show="!hasRight('editMasterData')">{{player.count_games}}</div>
-				<input class="form-control" ng-show="hasRight('editMasterData')" type="text" ng-model="player.count_games" />
-			</td>
-		</tr>
-		<tr>
-			<th>Tore</th>
-			<td>
-				<div ng-show="!hasRight('editMasterData')">{{player.count_goals}}</div>
-				<input class="form-control" ng-show="hasRight('editMasterData')" type="text" ng-model="player.count_goals" />
+				<input class="form-control" type="text" ng-model="team.homepage" />
 			</td>
 		</tr>
 	</table>
 
 	<p>
-		<button ng-show="hasRight('editMasterData')" class="btn btn-default" ng-click="save()">Speichern</button>
-		<button class="btn btn-default" onclick="window.history.back();">Zur&uuml;ck</button>
+		<button class="btn btn-default" ng-click="saveAndClose()">Speichern und Schlie&szlig;en</button>
+		<button class="btn btn-default" ng-click="save()">Speichern</button>
 	</p>
 </form>
 
-<!--
-<h2>Saison</h2>
-
-<table>
-
-<tr>
-  <th>Anzahl Spiele Gesamt</th>
-  <td>{{spieler.anzahlSpiele}}</td>
-</tr>
-<tr>
-  <th>Anzahl Tore Gesamt</th>
-  <td>{{spieler.tore}} + {{sp.anzahlTore}}</td>
-</tr>
-<tr>
-  <th>Gelbe Karten</th>
-  <td>{{sp.gelb}}</td>
-</tr>
-<tr>
-  <th>Gelbrote Karten</th>
-  <td>{{sp.gelbrot}}</td>
-</tr>
-<tr>
-  <th>Rote Karten</th>
-  <td>{{sp.rot}}</td>
-</tr>
-</table>
-
--->
+<button class="btn btn-default" onclick="window.history.back();">Zur&uuml;ck</button>
