--- a/LeagueManager/src/app/Team/RankTable.html
+++ b/LeagueManager/src/app/Team/RankTable.html
@@ -1,50 +1,52 @@
 
 <h2>Tabelle</h2>
-
+<p>Sortieren nach: {{sortBy}} {{sortOrder}} </p>
 <table class="table">
 	<tr>
 		<th>
-			<a href="" title="Nummer" ng-click="order('rank')">N</a>
-			<span class="sortorder" ng-show="predicate === 'rank'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Nummer" (click)="order('rank')">N</a>
+			<span class="sortorder" *ngIf="sortBy === 'rank'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" ng-click="order('name')">Mannschaft</a>
-			<span class="sortorder" ng-show="predicate === 'name'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" (click)="order('name')">Mannschaft</a>
+			<span class="sortorder" *ngIf="sortBy === 'name'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Spiele" ng-click="order('match_count')">SP</a>
-			<span class="sortorder" ng-show="predicate === 'match_count'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Spiele" (click)="order('match_count')">SP</a>
+			<span class="sortorder" *ngIf="sortBy === 'match_count'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Siege" ng-click="order('wins')">S</a>
-			<span class="sortorder" ng-show="predicate === 'wins'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Siege" (click)="order('wins')">S</a>
+			<span class="sortorder" *ngIf="sortBy === 'wins'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Unentschieden" ng-click="order('stand_off')">U</a>
-			<span class="sortorder" ng-show="predicate === 'stand_off'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Unentschieden" (click)="order('stand_off')">U</a>
+			<span class="sortorder" *ngIf="sortBy === 'stand_off'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Niederlagen" ng-click="order('defeat')">U</a>
-			<span class="sortorder" ng-show="predicate === 'defeat'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Niederlagen" (click)="order('defeat')">U</a>
+			<span class="sortorder" *ngIf="sortBy === 'defeat'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Tore" ng-click="order('shoot')">T</a>
-			<span class="sortorder" ng-show="predicate === 'shoot'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Tore" (click)="order('shoot')">T</a>
+			<span class="sortorder" *ngIf="sortBy === 'shoot'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Gegentore" ng-click="order('got')">GT</a>
-			<span class="sortorder" ng-show="predicate === 'got'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Gegentore" (click)="order('got')">GT</a>
+			<span class="sortorder" *ngIf="sortBy === 'got'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Tordifferenz" ng-click="order('goal_diff')">TD</a>
-			<span class="sortorder" ng-show="predicate === 'goal_diff'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Tordifferenz" (click)="order('goal_diff')">TD</a>
+			<span class="sortorder" *ngIf="sortBy === 'goal_diff'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
-			<a href="" title="Punkte" ng-click="order('points')">PKT</a>
-			<span class="sortorder" ng-show="predicate === 'points'" ng-class="{reverse:reverse}"></span>
+			<a style="cursor:pointer" title="Punkte" (click)="order('points')">PKT</a>
+			<span class="sortorder" *ngIf="sortBy === 'points'" [ngClass]="sortOrder"></span>
 		</th>
 	</tr>
-	<tr ng-repeat="p in place | orderBy:predicate:reverse">
+
+	<tr *ngFor="let p of data">
+		<!--  | orderBy:sortBy:reverse -->
 		<td>{{p.rank}}</td>
 		<td><a href="{{p.homepage}}" target="_blank">{{p.name}}</a></td>
 		<td>{{p.match_count}}</td>
