--- a/LeagueManager/src/app/app.component.html
+++ b/LeagueManager/src/app/app.component.html
@@ -1,11 +1,12 @@
 <h1>
   {{title}}
 </h1>
-
+<div style="position: absolute; right: 10pt">
+  <Auth></Auth>
+</div>
+<a routerLink="/Start">Start</a>
 <a routerLink="/Articles">Neuigkeiten</a>
+<a routerLink="/RankTable">Tabelle</a>
 
 <router-outlet></router-outlet>
 
-<pre>
-footer
-</pre>
