--- a/LeagueManager/src/app/Team/RankTable.html
+++ b/LeagueManager/src/app/Team/RankTable.html
@@ -5,43 +5,43 @@
 	<tr>
 		<th>
 			<a style="cursor:pointer" title="Nummer" (click)="order('rank')">N</a>
-			<span class="sortorder" *ngIf="sortBy === 'rank'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'rank'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" (click)="order('name')">Mannschaft</a>
-			<span class="sortorder" *ngIf="sortBy === 'name'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'name'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Spiele" (click)="order('match_count')">SP</a>
-			<span class="sortorder" *ngIf="sortBy === 'match_count'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'match_count'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Siege" (click)="order('wins')">S</a>
-			<span class="sortorder" *ngIf="sortBy === 'wins'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'wins'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Unentschieden" (click)="order('stand_off')">U</a>
-			<span class="sortorder" *ngIf="sortBy === 'stand_off'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'stand_off'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Niederlagen" (click)="order('defeat')">U</a>
-			<span class="sortorder" *ngIf="sortBy === 'defeat'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'defeat'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Tore" (click)="order('shoot')">T</a>
-			<span class="sortorder" *ngIf="sortBy === 'shoot'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'shoot'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Gegentore" (click)="order('got')">GT</a>
-			<span class="sortorder" *ngIf="sortBy === 'got'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'got'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Tordifferenz" (click)="order('goal_diff')">TD</a>
-			<span class="sortorder" *ngIf="sortBy === 'goal_diff'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'goal_diff'" [ngClass]="sortOrder"></span>
 		</th>
 		<th>
 			<a style="cursor:pointer" title="Punkte" (click)="order('points')">PKT</a>
-			<span class="sortorder" *ngIf="sortBy === 'points'" [ngClass]="sortOrder"></span>
+			<span class="sortorder" [hidden]="sortBy !== 'points'" [ngClass]="sortOrder"></span>
 		</th>
 	</tr>
 
